[package]
name = "payments_engine"
version = "0.1.0"
edition = "2024"
default-run = "payments_engine"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
csv = "1.3.1"
csv-async = "1.3.1"
dashmap = "6.1.0"
futures-util = "0.3.31"
itertools = "0.14.0"
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
tokio = { version = "1.47.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["compat"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }

[[bin]]
name = "payments_engine"
path = "src/main.rs"

[[bin]]
name = "tester"
path = "src/tester/main.rs"
